--- a/r4babs4/week-2/overview.qmd
+++ b/r4babs4/week-2/overview.qmd
@@ -1,11 +1,11 @@
 ---
 title: "Overview"
-subitle: "DA 2 Immunobiology: ..."
+subitle: "DA 2 Immunobiology: "
 toc: true
 toc-location: right
 ---
 
-This week you will be introduced to 
+This is the first of the three workshops which are specific to the Immunobiology strand. The aim of these workshops is to teach you how to analyse the flow cytometry data you will collect in the practicals. In this workshop, we will guide you through the analysis of a sample data set just like the one you will generate. Jillian collected these data in designing this set of practicals. You will learn both how to analyse the data and what your own data should look like. We will mainly rely of default formats for figures.
 
 ### Learning objectives
 
@@ -27,7 +27,7 @@ The successful student will be able to:
 
 1.  [Prepare](study_before_workshop.qmd)
 
-    i.  📖 Read 
+    i.  📖 Read what the sample data are, what analysis is needed and what tools we will use.
 
 
 2.  [Workshop](workshop.qmd)
