--- a/references.bib
+++ b/references.bib
@@ -177,3 +177,33 @@
 	doi = {10.1186/s13059-015-0850-7},
 	url = {http://dx.doi.org/10.1186/s13059-015-0850-7}
 }
+@article{flowCore,
+	title = {flowCore: flowCore: Basic structures for flow cytometry data},
+	author = {Ellis, B and Haaland, Perry and Hahne, Florian and Le Meur, Nolwenn and Gopalakrishnan, Nishant and Spidlen, Josef and Jiang, Mike and Finak, Greg},
+	year = {2024},
+	date = {2024}
+}
+
+@article{flowAI,
+	title = {flowAI: automatic and interactive anomaly discerning tools for flow cytometry data},
+	author = {Monaco, Gianni and Chen, Hao and Poidinger, Michael and Chen, Jinmiao and de Magalhaes, Joao Pedro and Larbi, Anis},
+	year = {2016},
+	date = {2016},
+	volume = {32},
+	url = {10.1093/bioinformatics/btw191}
+}
+
+@article{parks2006,
+	title = {A new {\textquotedblleft}Logicle{\textquotedblright} display method avoids deceptive effects of logarithmic scaling for low signals and compensated data},
+	author = {Parks, David R. and Roederer, Mario and Moore, Wayne A.},
+	year = {2006},
+	date = {2006},
+	journal = {Cytometry Part A},
+	pages = {541--551},
+	volume = {69A},
+	number = {6},
+	doi = {10.1002/cyto.a.20258},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cyto.a.20258},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/cyto.a.20258},
+	langid = {en}
+}
